Add test-service route and config to gateway
Introduced a new route for test-service in api-gateway.yml with path rewriting and updated JWT security settings. Added test-service.yml with basic server and Eureka client configuration.

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -15,11 +15,22 @@ spring:
         - id: discovery-server-route
           uri: lb://discovery-server 
           predicates:
-            - Path=/eureka/**
+            - Path=/eureka/**            
+        - id: test-service-route
+          uri: lb://test-service
+          predicates:
+            - Path=/test/**
+          filters:
+            - RewritePath=/test/(?<segment>.*), /$\{segment}
 
   # Security configuration to validate JWTs
   security:
-    oauth2:
+    oauth2:            
       resourceserver:
         jwt:         
           issuer-uri: http://localhost:9000
+          registration:
+            client-id: gateway
+            client-secret: secret
+
+
