Add OIDC route for auth-server in gateway config
Introduces a new route in api-gateway.yml to forward requests matching '/.well-known/**' to the 'auth-server' service. This enables proper routing for OIDC discovery endpoints.

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -41,3 +41,7 @@ spring:
                 - Path=/test/**
               filters:
                 - RewritePath=/test/(?<segment>.*), /$\{segment}
+            - id: auth-server-oidc-route
+              uri: lb://auth-server
+              predicates:
+                - Path=/.well-known/**
