Add PreserveHostHeader filter to API Gateway
Configured the API Gateway to use the PreserveHostHeader filter by default. This ensures the original Host header is forwarded to downstream services.

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -22,6 +22,9 @@ spring:
                   - GET
                   - POST
                 allowedHeaders: "*"
+          default-filters:
+            - PreserveHostHeader
+                  
           routes:
             - id: discovery-server-route
               uri: lb://discovery-server
