Fix auth-server route id and URI in gateway config
Corrects the route id to 'auth-server-login-route' and updates the URI to 'lb://auth-server' for the authentication server route in api-gateway.yml.

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -36,8 +36,8 @@ spring:
                 - Path=/test/**
               filters:
                 - RewritePath=/test/(?<segment>.*), /$\{segment}
-            - id: auth-server
-                uri: lb://auth-server-login-route
+            - id: auth-server-login-route
+                uri: lb://auth-server
                 predicates:
                   - Path=/.well-known/**,/oauth2/**,/login,/logout,/consent
                 preserveHostHeader: true 
