Increase logging level to TRACE for security and trading
Changed the logging level for org.springframework.security and com.trading from DEBUG to TRACE to provide more detailed log output for troubleshooting and monitoring.

--- a/applicaton.yml
+++ b/applicaton.yml
@@ -10,8 +10,8 @@ eureka:
 
 logging:
   level:
-    org.springframework.security: DEBUG
-    com.trading: DEBUG
+    org.springframework.security: TRACE
+    com.trading: TRACE
 
 # ---Prod Profile Properties ---
 ---
